--- a/landing/locales/en-US.json
+++ b/landing/locales/en-US.json
@@ -1,71 +1,71 @@
 {
     "pages": {
         "about": {
-            "description": "👋 Welcome to the new dimension of healthcare consulting! Our goal is to support our users in increasing their health awareness with the help of a digital health assistant. Our application is based on artificial intelligence and enables personalized health analysis.",
+            "description": "👋 Welcome to a new dimension of health advisory! Our goal is to support our users in increasing their health awareness with the help of a digital health assistant. Our app is powered by artificial intelligence and allows for personalized health analysis.",
             "goal": "🎯 Our Goal",
-            "goalText": "To create an innovative platform that analyzes your health data and provides useful insights. Our assistant helps you understand your health status based on average heart rate, blood pressure, current medications, medical records, date of birth, weight, height, and other data, and can even predict potential health issues.",
+            "goalText": "To create an innovative platform that provides useful information by analyzing your health data. Our assistant helps you understand your health status based on average heart rate, blood pressure, current medications, medical reports, birth date, weight, height, and other data, and can predict potential health problems.",
             "features": "👀 Key Features",
             "featuresList": [
-                "User health data analysis 📈",
+                "Analyzing user health data 📈",
                 "Personalized health advice ↩️",
-                "Data export and import in JSON format 🙈",
+                "Export and import data in JSON format 🙈",
                 "Intuitive and responsive user interface 🎊"
             ],
             "howItWorks": "🛠️ How It Works?",
             "howItWorksSteps": [
-                "Visit the <a href='https://app.sanovise.ranzak.site' target='_blank'>Sanovise App</a> page.",
-                "Enter your health data, such as heart rate, blood pressure, height, weight, etc.",
-                "The application analyzes the data using artificial intelligence.",
-                "Receive feedback on your health status and learn about potential health risks."
+                "Visit the <a href='https://app.sanovise.ranzak.site' target='_blank'>Sanovise App</a> website.",
+                "Enter your health data such as heart rate, blood pressure, height, weight, etc.",
+                "The app analyzes the data using artificial intelligence.",
+                "Receive feedback on your health status and get informed about possible diseases."
             ],
-            "whyChooseUs": "👉 Why Choose This Application?",
-            "whyChooseUsText": "Our health advisory system is built on modern technology, simplifying the management and analysis of your health data. With an intuitive user interface and artificial intelligence integration, you can get a comprehensive view of your health. It's an ideal choice for anyone who wants to actively monitor and improve their health.",
-            "thankYou": "Thank you for choosing us and giving us the opportunity to support you on your journey toward a healthier lifestyle!"
+            "whyChooseUs": "👉 Why Choose This App?",
+            "whyChooseUsText": "Our health advisory system is built on modern technology that simplifies the management and analysis of your health data. With the integration of an intuitive user interface and artificial intelligence, you can gain a comprehensive understanding of your health status. It's the ideal choice for anyone who wants to actively track and improve their health.",
+            "thankYou": "Thank you for choosing us and giving us the opportunity to support you on your journey to a healthier lifestyle!"
         },
         "contact": {
             "phone": "📞 Phone",
             "phoneNumber": "+36 123 456 789",
             "email": "📧 Email",
-            "emailAddress": "info{dot}sanovise.com",
+            "emailAddress": "info{at}sanovise.com",
             "address": "📍 Address",
             "addressDetails": "Debrecen, Kassai út 1.",
             "contactFormTitle": "📝 Write to us",
             "nameLabel": "Name",
             "namePlaceholder": "e.g., Dr. Sanovise",
             "emailLabel": "Email",
-            "emailPlaceholder": "e.g., info{dot}sanovise.hu",
+            "emailPlaceholder": "e.g., info{at}sanovise.com",
             "messageLabel": "Message",
-            "messagePlaceholder": "e.g., There's an issue with the system!",
-            "submitButton": "Send",
-            "agreeLabel": "I accept the terms of sending messages."
+            "messagePlaceholder": "e.g., There's a problem with the system!",
+            "submitButton": "Submit",
+            "agreeLabel": "I accept the terms and conditions of sending messages."
         },
         "download": {
-            "title": "Download the Application",
-            "subtitle": "Choose the platform that suits you or simply use the web version.",
+            "title": "Download the App",
+            "subtitle": "Choose the platform that suits you, or simply use the web version.",
             "mobile": {
-                "title": " Mobile Applications",
-                "description": "Take your health assistant with you wherever you go.",
+                "title": "📱 Mobile Apps",
+                "description": "Take your health assistant anywhere with you.",
                 "android": {
                     "title": "Android",
-                    "description": "Available for Android 6.0 and later.",
+                    "description": "Available for Android 6.0 and newer versions.",
                     "button": "Download"
                 },
                 "ios": {
                     "title": "iOS (iPhone/iPad)",
-                    "description": "Compatible with iOS 14 and later.",
+                    "description": "Compatible with iOS 14 and newer systems.",
                     "button": "Download"
                 }
             },
             "web": {
-                "title": "✨ Web Application",
-                "emphasis": "✨ The easiest and most convenient way to use the application!",
-                "description": "No installation required, instantly accessible from any modern browser.",
+                "title": "✨ Web App",
+                "emphasis": "✨ The easiest and most convenient way to use the app!",
+                "description": "No installation needed, immediately available from any modern browser.",
                 "launchButton": "🚀 Launch Web App",
                 "benefits": "Always up-to-date version, accessible from anywhere."
             },
             "desktop": {
-                "title": "️🖥️Desktop Applications",
-                "description": "Install the application directly on your computer for a seamless experience.",
+                "title": "🖥️ Desktop Apps",
+                "description": "Install the app directly to your computer for a seamless experience.",
                 "windows": {
                     "title": "Windows"
                 },
@@ -76,92 +76,118 @@
                     "title": "Linux (.deb / .AppImage)"
                 },
                 "downloadButton": "Download",
-                "note": "Select the version that matches your operating system."
+                "note": "Choose the version appropriate for your operating system."
             }
         },
         "index": {
             "heroTitle": "🤖 Digital Health Assistant",
-            "heroDescription": "Explore your health data in detail and make the best decisions with our recommendations!",
+            "heroDescription": "Explore your health data in detail and make the best decisions with the help of our recommendations!",
             "getStarted": "Get Started",
-            "features": {
-                "titles": [
-                    "📊 Detailed Analysis",
-                    "🛡️ Data Security",
-                    "🌐 Multi-Platform"
-                ],
-                "descriptions": [
-                    "Personalized health advice based on your data.",
-                    "Privacy protocols and encryption at all levels.",
-                    "Available on web, desktop, and mobile devices."
-                ]
-            }
+            "features": [
+                {
+                    "title": "📊 Detailed Analysis",
+                    "description": "We analyze your health data using the latest technologies. We provide personalized advice to improve your health."
+                },
+                {
+                    "title": "🛡️ Data Security",
+                    "description": "Privacy protocols and encryption at all levels. Your data is secure with us. Only you have access to your information."
+                },
+                {
+                    "title": "🌐 Multi-platform",
+                    "description": "Available on web, desktop, and mobile devices. Our app works seamlessly across all platforms."
+                }
+            ]
         },
         "terms": {
-            "title": "Terms of Use",
+            "title": "Terms and Conditions",
             "lastUpdated": "Last updated: {date}",
             "acceptanceText": [
-                "By using the service, you agree to these Terms of Use.",
-                "If you have any questions about the terms, please contact us."
+                "By using the service, you agree to these Terms and Conditions.",
+                "If you have any questions regarding the terms, please contact us."
             ],
             "sections": [
                 {
                     "title": "1. Acceptance of Terms",
                     "content": [
-                        "Welcome to the Sanovise website. By accessing the website, you agree to be bound by these Terms of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws.",
-                        "If you do not agree with any of these terms, you are prohibited from using or accessing this site."
+                        "Welcome to the Sanovise website. By accessing the website, you agree to these Terms and Conditions, all applicable laws and regulations, and you accept responsibility for compliance with applicable local laws.",
+                        "If you do not agree with these terms, you are prohibited from using the website."
                     ]
                 },
                 {
                     "title": "2. License to Use",
                     "content": [
-                        "Permission is granted to temporarily download one copy of the materials on the Sanovise website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:",
-                        "- modify or copy the materials",
-                        "- use the materials for any commercial purpose",
-                        "- attempt to decompile or reverse engineer any software contained on the website",
-                        "- remove any copyright or other proprietary notations",
-                        "- transfer the materials to another person or 'mirror' the materials on any other server",
-                        "This license shall automatically terminate if you violate any of these restrictions and may be terminated by Sanovise at any time."
+                        "You are permitted to temporarily download materials from the Sanovise website for personal, non-commercial use. This is a license, not a transfer of title, and under this license, you may not:",
+                        {
+                            "list": [
+                                "Modify or copy the materials",
+                                "Use the materials for commercial purposes",
+                                "Decompile or reverse engineer the software on the website",
+                                "Remove copyright or ownership notations",
+                                "Transfer the materials to another person or mirror the materials on another server"
+                            ]
+                        },
+                        "This license will automatically terminate if you violate any of these restrictions, and Sanovise may terminate it at any time."
                     ]
                 },
                 {
                     "title": "3. Disclaimer",
                     "content": [
-                        "The materials on the Sanovise website are provided 'as is'. Sanovise makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.",
-                        "Further, Sanovise does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials or on any sites linked to this site."
+                        "The materials on the Sanovise website are provided 'as is'. Sanovise makes no warranties, express or implied, and hereby disclaims all other warranties.",
+                        "Additionally, Sanovise does not guarantee the accuracy, effectiveness, or reliability of the materials on the website, nor does it take responsibility for content on other websites linked from the Sanovise site."
                     ]
                 },
                 {
                     "title": "4. Limitations",
                     "content": [
-                        "In no event shall Sanovise or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on the website, even if Sanovise or an authorized representative has been notified orally or in writing of the possibility of such damage.",
-                        "Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you."
+                        "In no event shall Sanovise or its suppliers be liable for any damages (including, but not limited to, damages from data loss or business interruptions) arising from the use or inability to use the website.",
+                        "As some jurisdictions do not allow the exclusion of implied warranties or the limitation of liability for consequential damages, these limitations may not apply to you."
                     ]
                 },
                 {
                     "title": "5. Accuracy of Materials",
                     "content": [
-                        "The materials appearing on the Sanovise website could include technical, typographical, or photographic errors. Sanovise does not warrant that any of the materials on its website are accurate, complete, or current.",
-                        "Sanovise may make changes to the materials contained on its website at any time without notice. However, Sanovise does not make any commitment to update the materials."
+                        "The materials on the Sanovise website may contain technical, typographical, or photographic errors. Sanovise does not guarantee that any of the materials on the website are accurate, complete, or current.",
+                        "Sanovise may make changes to the materials on its website at any time without notice, but does not commit to updating them."
                     ]
                 },
                 {
                     "title": "6. Links",
                     "content": [
-                        "Sanovise has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Sanovise.",
-                        "Use of any such linked website is at the user's own risk."
+                        "Sanovise has not reviewed all of the websites linked to its own website and is not responsible for the contents of any linked website.",
+                        "The use of any such linked websites is at the user's own risk."
                     ]
                 },
                 {
                     "title": "7. Modifications",
                     "content": [
-                        "Sanovise may revise these Terms of Use for its website at any time without notice.",
-                        "By using this website, you agree to be bound by the then current version of these Terms of Use."
+                        "Sanovise may revise these terms and conditions at any time without prior notice.",
+                        "By using the website, you accept the current terms."
                     ]
                 },
                 {
                     "title": "8. Governing Law",
                     "content": [
-                        "These terms and conditions are governed by and construed in accordance with the applicable law, and you irrevocably submit to the exclusive jurisdiction of the courts in that location."
+                        "These terms are governed by applicable law, and you irrevocably accept the exclusive jurisdiction of the courts in the relevant area."
+                    ]
+                },
+                {
+                    "title": "9. Privacy",
+                    "content": [
+                        "Sanovise is committed to protecting your data. We handle data processing in accordance with applicable laws and only process the data you provide or the data necessary for the app's operation.",
+                        "For more information, please read our Privacy Policy."
+                    ]
+                },
+                {
+                    "title": "10. Limitation of Liability",
+                    "content": [
+                        "The information provided by the app is for informational purposes only and does not substitute medical advice, diagnosis, or treatment.",
+                        "Sanovise is not responsible for the accuracy, completeness, or timeliness of the provided data, or for any damages resulting from decisions made based on that information."
+                    ]
+                },
+                {
+                    "title": "11. Contact",
+                    "content": [
+                        "If you have any questions or concerns about the Terms and Conditions, please contact us using the provided contact details."
                     ]
                 }
             ]
@@ -169,13 +195,13 @@
     },
     "components": {
         "footer": {
-            "terms": "Terms of Service",
-            "copyright": "© 2025 Sanovise - All rights reserved."
+            "terms": "Terms and Conditions",
+            "copyright": "© 2025 Sanovise - All Rights Reserved."
         },
         "header": {
             "home": "Home",
             "download": "Download",
-            "about": "About",
+            "about": "About Us",
             "contact": "Contact"
         }
     }
