feat: add version number to SettingsModal.vue

--- a/app/locales/ar-SA.json
+++ b/app/locales/ar-SA.json
@@ -89,7 +89,8 @@
         "settingsModal": {
             "title": "الإعدادات",
             "selectLanguage": "اختر اللغة المطلوبة:",
-            "selectAIModel": "اختر نموذج الذكاء الاصطناعي:"
+            "selectAIModel": "اختر نموذج الذكاء الاصطناعي:",
+            "version": "الإصدار"
         },
         "userForm": {
             "requiredInfo": "الحقول التي تحتوي على <span class='required'>*</span> مطلوبة!",
